Message List: Fix scrolling jumps

--- a/src/components/common/Audio.scss
+++ b/src/components/common/Audio.scss
@@ -125,6 +125,10 @@
     text-overflow: ellipsis;
   }
 
+  canvas {
+    height: 23px;
+  }
+
   .voice-duration {
     margin: .25rem 0 0;
     font-size: .875rem;
